# rocketchat-roles

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml  request.sh  requests.sh
.github/workflows/: build.yml  docker-image.yml
results/: custom_homepage.html  custom_style.css  layout.json
src/: main.rs  tests.rs
src/api/: mod.rs  permission_api.rs  rawdoc_api.rs  role_api.rs  room_api.rs  sdui_api.rs  service_api.rs  user_api.rs
src/models/: mod.rs  permission_model.rs  role_model.rs  room_model.rs  sdui_model.rs  session_model.rs  setting_model.rs  user_model.rs
src/repository/: localdb_repo.rs  mod.rs  mongodb_repo.rs
static/css/: style.css
templates/: base.html.tera  index.html.tera  nav.html.tera  sess.html.tera  user.html.tera  user_detail.html.tera  users.html.tera
