[package]
name = "rocketmongoman"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tokio = "1"
# futures = "0.3"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
chrono = "0.4" # Used for setting DateTimes
tera = { version = "1", default-features = false }
utoipa-scalar = { version = "0.1.0", features = ["rocket"] }
utoipa-rapidoc = { version = "4.0.0", features = ["rocket"] }
utoipa-redoc = { version = "4.0.0", features = ["rocket"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["rocket"] }
utoipa = { version = "4.2.3", features = ["rocket_extras"] }

[dependencies.mongodb]
version = "2.8.2"
default-features = false
features = ["sync"] 

[dependencies.rocket_dyn_templates]
version = "0.1.0"
features = ["tera"]
